--- a/contenido/info_beca.html
+++ b/contenido/info_beca.html
@@ -116,7 +116,7 @@
                 <div class="permit_resolution">
                   <h3>Plazo máximo de resolución</h3>
                   <p>
-                  1 día
+                  45 Día hábiles 
                   </p>
                 </div>
                 <!-- Resolution -->
