--- a/contenido_beca/info_beca.html
+++ b/contenido_beca/info_beca.html
@@ -116,7 +116,7 @@
                 <div class="permit_resolution">
                   <h3>Plazo máximo de resolución</h3>
                   <p>
-                  1 día
+                    45 días habiles
                   </p>
                 </div>
                 <!-- Resolution -->
@@ -139,7 +139,7 @@
             <aside class="sidebar">
               <!-- Online permit -->
               <div class="topic online_permit">
-                <a href="../contenido/formulario_beca.html" class="blue_btn full">REALIZAR EN LÍNEA</a>
+                <a href="../contenido_beca/formulario_beca.html" class="blue_btn full">REALIZAR EN LÍNEA</a>
               </div>
             </aside>
           </div>
