--- a/contenido_beca/formulario_beca.html
+++ b/contenido_beca/formulario_beca.html
@@ -81,7 +81,7 @@
     <div class="panel-body">
         <div class="form-group">
           <label class="control-label" for="homotramite">Homoclave del Trámite:</label>
-          <input class="form-control" name="homoclave" id="homotramite" placeholder="CIGGET-90A-03" type="text" disabled>
+          <input class="form-control" name="homoclave" id="homotramite" placeholder="CIGGET-00-003" type="text" disabled>
         </div>
         <!--
         <div class="form-group">
@@ -217,7 +217,7 @@
             <option value="0">Municipio...</option>
           </select>
         </div>
-          <div id="demoIzq" ><?php include('generaSelect.php'); generaSelect(); ?></div>
+          <div id="demoIzq" >
 
           <select class="selectpicker" data-style="btn-primary" name="select1" id="select1" onchange="cargaContenido(this.id)">
                 <option value="0">Estado</option>
@@ -254,7 +254,7 @@
                 <option value="31">Yucatan</option>
                 <option value="32">Zacatecas</option>
           </select>
-
+        </div>
       </div>
     </div>
     <!-- fin de la etapa select dpendoentes  -->
@@ -456,7 +456,9 @@
   </div>
 </div>
 <button type="submit" name="enviar" value="Enviar" class="btn btn-primary"  target="_blank" id  = "btnEnviar">Enviar solicitud</button>
-<div id="resultado"><?php include('consulta.php');?></div>
+<!-- <div id="resultado"><?php include('consulta.php');?></div> -->
+<!-- <div id="resultado"><?php include('info_beca.php');?></div> -->
+
 </div>
 </form>
 
