--- a/contenido_beca/formulario_beca.html
+++ b/contenido_beca/formulario_beca.html
@@ -9,6 +9,7 @@
 
     <!-- CSS -->
     <link href="../css/gobmx.css" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
   </head>
 
@@ -107,7 +108,7 @@
       -->
       <div class="form-group">
         <label class="control-label" for="fechatramite">Fecha de solicitud de tramite:</label>
-        <input class="form-control" name="fechatramite" id="fechatramite" placeholder="fecha de solicitud del tramite" type="date">
+        <input type = "text" class="form-control" name="fechatramite" id="fechatramite" placeholder="fecha de solicitud del tramite" type="date">
       </div>
     </div>
   </div>
@@ -122,21 +123,22 @@
     <div class="panel-body">
       <div class="form-group">
         <label class="control-label" for="curp">CURP:</label>
-        <input class="form-control" name="curp" id="curp" placeholder="curp" type="text" required>
+        <input class="form-control" name="curp" id="curp" placeholder="curp" type="text" required
+        style="text-transform:uppercase;" onkeyup="javascript:this.value=this.value.toUpperCase();">
       </div>
 
 
       <div class="form-group">
         <label class="control-label" for="nombre">Nombre(s):</label>
-        <input class="form-control" id="nombre" name="nombre" placeholder="Nombre" type="text" required onkeydown="return validarLetras(event)">
+        <input class="form-control" id="nombre" name="nombre" placeholder="Nombre" type="text" required pattern="[a-zA-Z]*" onkeydown="return validarLetras(event)">
       </div>
       <div class="form-group">
         <label class="control-label" for="primerApelli">Primer Apellido:</label>
-        <input class="form-control" name="appaterno" id="primeApelli" placeholder="Apellido Paterno" type="text" required onkeydown="return validarLetras(event)">
+        <input class="form-control" name="appaterno" id="primeApelli" placeholder="Apellido Paterno" type="text" required pattern="[a-zA-Z]*" onkeydown="return validarLetras(event)">
       </div>
       <div class="form-group">
         <label class="control-label" for="segunApelli">Segundo Apellido:</label>
-        <input class="form-control" name="apmaterno" id="segunApelli" placeholder="Apellido Materno" type="text" required onkeydown="return validarLetras(event)">
+        <input class="form-control" name="apmaterno" id="segunApelli" placeholder="Apellido Materno" type="text" required pattern="[a-zA-Z]*" onkeydown="return validarLetras(event)">
       </div
     </div>
   </div>
@@ -161,7 +163,7 @@
       </div>
       <div class="form-group">
         <label class="control-label" for="email">Correo electrónico:</label>
-        <input class="form-control" name="email" id="email" placeholder="ejemplo: nombre@gmail.com" type="text" required>
+        <input class="form-control" name="email" id="email" placeholder="ejemplo: nombre@gmail.com" type="email" required>
         <div id = "mensaje1" class = "errores">Dame un e-mail correcto</div>
       </div>
     </div>
@@ -174,6 +176,22 @@
 
   <div id= "div05" class="panel panel-default">
     <div class="panel-body">
+
+      <!-- dev select Tipo de Vialidad  -->
+      <div class="form-group" data-style="btn-inverse">
+        <select class="select-vialidad">
+          <option value="0">Tipo de vialidad</option>
+          <option value = "">Avenida</option>
+          <option value = "">Boulevard</option>
+          <option value = "">Calle</option>
+          <option value = "">Carretera</option>
+          <option value = "">Camino</option>
+          <option value = "">Privada</option>
+          <option value = "">Terracería</option>
+        </select>
+      </div>
+      <!--end dev Tipo de Vialidad  -->
+
       <div class="form-group">
         <label class="control-label" for="tipoViali">Tipo de vialidad:</label>
         <input class="form-control" name="vialidad" id="tipoViali" placeholder="(Ej. Avenida, Boulevard, Calle, Carretera, Camino, Privada, Terracería, etc)" type="text" required>
@@ -240,22 +258,22 @@
                 <option value="13">Guerrero</option>
                 <option value="14">Hidalgo</option>
                 <option value="15">Jalisco</option>
-                <option value="16">Michoacan</option>
+                <option value="16">Michoacán</option>
                 <option value="17">Morelos</option>
                 <option value="18">Nayarit</option>
                 <option value="19">Nuevo León</option>
                 <option value="20">Oaxaca</option>
                 <option value="21">Puebla</option>
-                <option value="22">Queretaro</option>
+                <option value="22">Querétaro</option>
                 <option value="23">Quintana Roo</option>
-                <option value="24">San Luis Potosin</option>
+                <option value="24">San Luis Potosí</option>
                 <option value="25">Sinaloa</option>
                 <option value="26">Sonora</option>
                 <option value="27">Tabasco</option>
                 <option value="28">Tamaulipas</option>
                 <option value="29">Tlaxcala</option>
                 <option value="30">Veracruz</option>
-                <option value="31">Yucatan</option>
+                <option value="31">Yucatán</option>
                 <option value="32">Zacatecas</option>
           </select>
         </div>
