--- a/contenido_beca/formulario_beca.html
+++ b/contenido_beca/formulario_beca.html
@@ -108,7 +108,7 @@
       -->
       <div class="form-group">
         <label class="control-label" for="fechatramite">Fecha de solicitud de tramite:</label>
-        <input type = "text" class="form-control" name="fechatramite" id="fechatramite" placeholder="fecha de solicitud del tramite" type="date">
+        <input class="form-control" name="fechatramite" id="fechatramite" placeholder="fecha de solicitud del tramite" type="date">
       </div>
     </div>
   </div>
@@ -176,21 +176,6 @@
 
   <div id= "div05" class="panel panel-default">
     <div class="panel-body">
-
-      <!-- dev select Tipo de Vialidad  -->
-      <div class="form-group" data-style="btn-inverse">
-        <select class="select-vialidad">
-          <option value="0">Tipo de vialidad</option>
-          <option value = "">Avenida</option>
-          <option value = "">Boulevard</option>
-          <option value = "">Calle</option>
-          <option value = "">Carretera</option>
-          <option value = "">Camino</option>
-          <option value = "">Privada</option>
-          <option value = "">Terracería</option>
-        </select>
-      </div>
-      <!--end dev Tipo de Vialidad  -->
 
       <div class="form-group">
         <label class="control-label" for="tipoViali">Tipo de vialidad:</label>
