--- a/contenido_beca/formulario_beca.html
+++ b/contenido_beca/formulario_beca.html
@@ -317,32 +317,19 @@
       <div class="form-group">
         <script type="text/javascript">
               function mostrar(id) {
-
                 if (id == "escoje") {
                   $("#maestria").hide();
                   $("#doctorado").hide();
-
-
-
                 }
-
                 if (id == "maestria") {
                   $("#maestria").show();
                   $("#doctorado").hide();
-
-
-
                 }
-
                 if (id == "doctorado") {
                   $("#maestria").hide();
                   $("#doctorado").show();
-
-
                 }
-
               }
-
           </script>
 
             <style type="text/css">
@@ -352,9 +339,7 @@
                     box-shadow: 0 2px 5px #666666;
                     padding: 10px;
                     margin-top:5px;
-
                 }
-
             </style>
 
           </br>
@@ -537,7 +522,7 @@
   #########y comienza el footer de la página##############
    -->
 
-  <footer class="gobmx-footer" style = "width:100%px;">
+  <footer class="gobmx-footer">
     <div class="container">
       <div class="contact-methods">
         <div class="way about">
